Styling for header and filters

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,10 @@
 // Colors
 $dark-grey: #333333;
+$light-blue: #2c99d8;
+$dark-blue: #364051;
+
+//Font size
+$font-size-large: 1.8rem;
 
 //Spacing
 $s-size: 1.2rem;
