Add expensify styles

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -2,9 +2,12 @@
 $dark-grey: #333333;
 $light-blue: #2c99d8;
 $dark-blue: #364051;
+$light-grey: #F7F7F7;
+$grey: #666;
 
 //Font size
 $font-size-large: 1.8rem;
+$font-size-small: 1.4rem;
 
 //Spacing
 $s-size: 1.2rem;
