--- a/src/styles/components/_loader.scss
+++ b/src/styles/components/_loader.scss
@@ -3,11 +3,10 @@
     display: flex;
     height: 100vh;
     justify-content: center;
-    width: 100vh;
-
-}
-
-.loader__image {
+    width: 100vw;
+  }
+  
+  .loader__image {
     height: 6rem;
     width: 6rem;
-}
+  }
