Added gitHub Login auth

--- a/src/styles/components/_box-layout.scss
+++ b/src/styles/components/_box-layout.scss
@@ -20,3 +20,12 @@
     margin: 0 0 $m-size 0;
     line-height: 1;
 }
+
+.box-layout__buttons {
+    display: flex;
+    flex-direction: column;
+    
+    > * {
+        margin-bottom: $m-size;
+    }
+}
